--- a/src/style/scss/_input.scss
+++ b/src/style/scss/_input.scss
@@ -132,7 +132,7 @@
       }
       .customerinfo-telephone,
       .customerinfo-alttelephone {
-        width: 49%;
+        width: 49.5%;
       }
     }
     .setupinfo {
@@ -145,12 +145,12 @@
       ul {
         position: relative;
         list-style-type: none;
-        padding: 0;
+        padding: 0 0 0 12%;
+        text-align: left;
       }
       li {
         display: inline-block;
-        width: 30%;
-        text-align: left;
+        width: 32%;
       }
       label {
         display: inline-block;
@@ -220,18 +220,11 @@
       
       .transferuser,
       .transferpassword {
-        width: 46.7%;
-      }
-      .transferuser {
-        margin-left: 2.5%;
-      }
-      .transferpassword {
-        margin-left: 1%
+        width: 47.2%;
       }
       .transfermedia,
       .transfersource {
         width: 95%;
-        margin-left: 2.5%;
       }
     }
   }
